changed grid-gap to be fixed size

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -172,7 +172,7 @@
     &.fairLaunch {
       display: grid;
       grid-template-columns: auto 1fr;
-      column-gap: 10%;
+      column-gap: 5em;
       font-family: Inter;
 
       // .pic {
